# bi0-chat-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260520_0001_initial_schema.py  20260531_0002_session_persistence.py
app/: main.py
app/agent/: __init__.py  events.py  factory.py  hook_registry.py  hooks.py  llm_planner.py  openai_adapter.py  planner.py  skill_resolver.py  skill_specs.py  skills.py  subagent_runner.py  tool_bindings.py
app/api/: deps.py  health.py  router.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py  telemetry.py  tool_errors.py
app/db/: __init__.py  session.py
app/models/: __init__.py  base.py  (+12 more)
docs/: TODO.next.md  agent-framework-zh.md  demo-query-flow-trace-zh.md  demo-session-flow-zh.md  session-persistence-zh.md  user-query-flow-zh.md
scripts/: demo_session_flow.py  e2e_poll_all.py
tests/: conftest.py  test_auth_items.py  test_bio_extended_tools.py  test_bio_harness.py  test_bio_skills.py  test_bio_tools.py  test_exceptions.py  test_health.py  test_model_router.py  test_planner_resume.py  test_provider_secret_store.py  test_realtime_and_agents.py  test_resume_idempotency.py  test_sandbox_subagent.py  test_security_and_policies.py  test_session_persistence.py  test_sessions_api.py  test_skill_environment.py  test_skill_resolver_tools.py  test_spliceai_api.py  test_spliceai_service.py  test_spliceai_tools.py  test_supervisor_timeout_and_approval.py  test_tool_events.py  test_tool_registry.py
(+107 files in other folders)
